--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=postgresql://postgres:4051@localhost:5432/library_db
+DATABASE_URL=postgresql+psycopg2://postgres:123@localhost:5432/library_db
+
